updating to 1.2 removing unneccesary code

--- a/force-app/main/default/classes/PostInstallScript.cls
+++ b/force-app/main/default/classes/PostInstallScript.cls
@@ -56,4 +56,8 @@ global class PostInstallScript implements InstallHandler {
         }
     }    
 
+    @Deprecated
+    global void deleteOrphanAffiliations() {
+        System.debug('deleteOrphanAffiliations is deprecated and no longer does anything.');
+    }
 }
